Processando arquivo de entrada da sequência de DNA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ add_executable( dna_profiler
                 src/Database.cpp
                 src/DNAProfiler.cpp
                 src/IOManager.cpp
-                #src/Sequence.cpp
+                src/Sequence.cpp
               )
